# python-switchbot-ble

./: .gitignore  .readthedocs.yaml  NOTES.md  README.md  alarm_info.py  bot_information.py  bot_types.py  main.py  pyproject.toml  switchbot.py  switchbot_scanner.py
docs/: conf.py  contributing.rst  index.rst  installation.rst  requirements.txt  usage-dev.rst  usage-repl.rst
docs/api/: alarm_info.rst  bot_information.rst  bot_types.rst  index.rst
examples/: multiple_on_off.py  simple.py  simple_w_pass.py
switchbot_api/: __init__.py  alarm_info.py  bot_information.py  bot_types.py  switchbot.py  switchbot_scanner.py
