[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "python-switchbot-ble"
version = "0.0.1"
authors = [
  { name="Benjamin Carlson", email="bcarlson336@gmail.com" },
]
description = "A capable Python library for controlling Switchbot devices over Bluetooth Low Energy (Without a Hub)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/carlsondev/python-switchbot-ble"
"Bug Tracker" = "https://github.com/carlsondev/python-switchbot-ble/issues"